--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <% layout('layout') %>
-<div class="title">  
-    <%= title %>
-    hello admin
-</div>  
+<div class="container">
+    <h1 class="title"><%= title %></h1>
+    <p class="subtitle">
+       	My first website with <strong>Bulma</strong>!
+    </p>
+</div>
