--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
+	<link rel="stylesheet" href="/bower/bulma/css/bulma.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 <body>
-	<%- body %>
+	<%- include partials/general/navigation.ejs %>
+	<section class="section">
+		<%- body %>
+  	</section>
+  	<script src="/bower/jquery/dist/jquery.min.js"></script>
+	<script src="/bower/chart.js/dist/Chart.js"></script>
 	<script src="/javascripts/index.js"></script>	
 </body>
 </html>
