--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,7 @@
 	background-color: #c1c1c1;
 } 
 .user-image.sm {
+	z-index: 2;
 	height: 32px;
 	width: 32px;
 }
@@ -37,10 +38,22 @@
 .user-table .table {
 	width: 100%;
 }
-.user-table .table .table-online-indicator {
-	/*display: inline-block;*/
-	/*line-height: 32px;*/
-	/*padding-top: 12px;*/
+.online-t, 
+.online-f {
+	z-index: 1;
+	position: absolute;
+	display: inline-block;
+	height: 36px;
+	width: 36px;
+	border-radius: 50%;
+	bottom: -2px;
+	left: -2px;
+}
+.online-t {
+	background-color: #23d160
+}
+.online-f {
+	background-color: #ff3860;
 }
 .user-table .table th,
 .user-table .table td {
@@ -50,6 +63,7 @@
 .user-link {
 	display: flex;
 	align-items: center;
+	position: relative;
 }
 .user-link .user-image.sm {
 	/*margin-top: 4px;*/
