--- a/views/partials/user/user-table.ejs
+++ b/views/partials/user/user-table.ejs
@@ -2,9 +2,9 @@
 <div class="container">
 	<h2 class="title"><%= title %></h2>
 	<div class="user-search-form">
-		<form method="post" action="/users">
+		<form method="get" action="/users">
 			<div class="columns">
-				<div class="column is-7">
+				<div class="column is-6">
 					<div class="field">
 			  			<label class="label">Username</label>
 			  			<div class="control has-icons-left has-icons-right">
@@ -18,7 +18,7 @@
 			  			<% }; %>
 					</div>	
 				</div>
-				<div class="column is-5">
+				<div class="column is-6">
 				
 					<div class="field is-grouped">
 				  		<div class="control">
